--- a/app/src/main/res/values-pa/strings.xml
+++ b/app/src/main/res/values-pa/strings.xml
@@ -51,6 +51,15 @@
     <string name="terms_and_conditions">Terms and Conditions</string>
     <string name="notifications_will_appear_here">Notifications will appear here</string>
     <string name="search_dhaba">Search Dhaba</string>
+    <string name="add_new_dhaba">ਨਵਾਂ Dhaba ਸ਼ਾਮਲ ਕਰੋ</string>
+    <string name="view_dhaba">View Dhaba</string>
+    <string name="go_to_home">Go To Home</string>
+    <string name="food">Food</string>
+    <string name="parking">Parking</string>
+    <string name="sleeping">Sleeping</string>
+    <string name="washroom_cleaning"><![CDATA[Washroom & Cleaning]]></string>
+    <string name="security">Security</string>
+    <string name="other">Other</string>
     <!--<string name="choose_language">Choose Language</string>
     <string name="english">English</string>
     <string name="hindi">हिंदी</string>
@@ -59,13 +68,13 @@
 
     <string-array name="menu_array">
         <item>Dhaba ਸੂਚੀ</item>
-        <item>ਨਵਾਂ Dhaba ਸ਼ਾਮਲ ਕਰੋ</item>
+        <item>@string/add_new_dhaba</item>
         <item>ਸੂਚਨਾਵਾਂ</item>
         <item>ਹੈਪਲਾਈਨ</item>
         <item>ਸੈਟਿੰਗਜ਼</item>
     </string-array>
 
-    <integer-array name="menu_array_icons">
+    <integer-array name="menu_icons">
         <item>@drawable/ic_home</item>
         <item>@drawable/ic_add_dhaba</item>
         <item>@drawable/ic_notification</item>
