1. UI of Add Dhaba Step 1 2. UI of Add Dhaba Step 2 3. UI of Update profile setting 4. UI of notification setting

--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -61,6 +61,26 @@
     <string name="washroom_cleaning"><![CDATA[Washroom & Cleaning]]></string>
     <string name="security">Security</string>
     <string name="other">Other</string>
+    <string name="dhaba_name">Dhaba Name</string>
+    <string name="dhaba_address">Dhaba address</string>
+    <string name="fetch_location">Fetch Location</string>
+    <string name="landmark">Landmark</string>
+    <string name="area">Area</string>
+    <string name="pin_code">Pin code</string>
+    <string name="upload_dhaba_pictures">Upload Dhaba Pictures</string>
+    <string name="save_as_draft">Save as Draft</string>
+    <string name="owner_name">Owner name</string>
+    <string name="phone_number">Phone number</string>
+    <string name="email_address">Email address</string>
+    <string name="address">Address</string>
+    <string name="pan_number">Pan Number</string>
+    <string name="aadhar_card_number">Aadhar Card Number</string>
+    <string name="upload_owner_picture">Upload Owner Picture</string>
+    <string name="upload_id_proof">Upload Id proof</string>
+    <string name="we_accept_aadhar_card_pan_card_or_driving_license">We accept aadhar card, pan card or driving license</string>
+    <string name="front_side">Front Side</string>
+    <string name="back_side">Back Side</string>
+    <string name="next">Next</string>
     <!--<string name="choose_language">Choose Language</string>
     <string name="english">English</string>
     <string name="hindi">हिंदी</string>
