--- a/app/src/main/res/values-pa/strings.xml
+++ b/app/src/main/res/values-pa/strings.xml
@@ -60,6 +60,26 @@
     <string name="washroom_cleaning"><![CDATA[Washroom & Cleaning]]></string>
     <string name="security">Security</string>
     <string name="other">Other</string>
+    <string name="dhaba_name">ਢਾਬੇ ਦਾ ਨਾਮ</string>
+    <string name="dhaba_address">ਢਾਬੇ ਦਾ ਪਤਾ</string>
+    <string name="fetch_location">ਸਥਾਨ ਪ੍ਰਾਪਤ ਕਰੋ</string>
+    <string name="landmark">ਲੈਂਡਮਾਰਕ</string>
+    <string name="area">ਖੇਤਰ</string>
+    <string name="pin_code">ਪਿੰਨ ਕੋਡ</string>
+    <string name="upload_dhaba_pictures">ਢਾਬਾ ਤਸਵੀਰਾਂ ਅਪਲੋਡ ਕਰੋ</string>
+    <string name="save_as_draft">ਡਰਾਫਟ ਦੇ ਰੂਪ ਵਿੱਚ ਸੁਰੱਖਿਅਤ ਕਰੋ</string>
+    <string name="owner_name">ਮਾਲਕ ਦਾ ਨਾਮ</string>
+    <string name="phone_number">ਫੋਨ ਨੰਬਰ</string>
+    <string name="email_address">ਈਮੇਲ ਖਾਤਾ</string>
+    <string name="address">ਪਤਾ</string>
+    <string name="pan_number">ਪੈਨ ਨੰਬਰ</string>
+    <string name="aadhar_card_number">ਆਧਾਰ ਕਾਰਡ ਨੰਬਰ</string>
+    <string name="upload_owner_picture">ਮਾਲਕ ਦੀ ਤਸਵੀਰ ਅਪਲੋਡ ਕਰੋ</string>
+    <string name="upload_id_proof">ਆਈਡੀ ਪਰੂਫ ਅਪਲੋਡ ਕਰੋ</string>
+    <string name="we_accept_aadhar_card_pan_card_or_driving_license">ਅਸੀਂ ਆਧਾਰ ਕਾਰਡ, ਪੈਨ ਕਾਰਡ ਜਾਂ ਡਰਾਈਵਿੰਗ ਲਾਇਸੈਂਸ ਸਵੀਕਾਰ ਕਰਦੇ ਹਾਂ</string>
+    <string name="front_side">ਸਾਹਮਣੇ ਵਾਲੇ ਪਾਸੇ</string>
+    <string name="back_side">ਪਿਛਲਾ ਪਾਸਾ</string>
+    <string name="next">ਅਗਲਾ</string>
     <!--<string name="choose_language">Choose Language</string>
     <string name="english">English</string>
     <string name="hindi">हिंदी</string>
