Amenities Design -> Done

--- a/app/src/main/res/values-pa/strings.xml
+++ b/app/src/main/res/values-pa/strings.xml
@@ -60,6 +60,60 @@
     <string name="washroom_cleaning"><![CDATA[Washroom & Cleaning]]></string>
     <string name="security">Security</string>
     <string name="other">Other</string>
+    <string name="food_license">Food License</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="food_at_100_inr">Food at 100 INR</string>
+    <string name="ro_clean_water">RO Clean Water</string>
+    <string name="veg_food_non_veg">Veg Food | Non Veg</string>
+    <string name="veg">Veg</string>
+    <string name="non_veg">Non Veg</string>
+    <string name="both">Both</string>
+    <string name="upload_food_license_photo">Upload food license photo</string>
+    <string name="upload_food_photos">Upload Food Photos</string>
+    <string name="upload_parking_photos">Upload Parking Photos</string>
+    <string name="concrete_parking">Concrete Parking</string>
+    <string name="fully_fenced">Fully Fenced</string>
+    <string name="open">Open</string>
+    <string name="flat_hard_parking">Flat Hard Parking</string>
+    <string name="kacha_flat_parking">Kacha Flat Parking</string>
+    <string name="select_parking_space">Select Parking Space</string>
+    <string name="_1_20">1-20</string>
+    <string name="twenty_to_fifty">20-50</string>
+    <string name="_50_100">50-100</string>
+    <string name="above_100">Above 100</string>
+    <string name="bed_charpai">Bed/Charpai</string>
+    <string name="number_of_beds">Number of Beds</string>
+    <string name="_1_2">1-2</string>
+    <string name="_2_5">2-5</string>
+    <string name="above_5">Above 5</string>
+    <string name="upload_sleeping_amenities_photo">Upload Sleeping Amenities Photo</string>
+    <string name="fan">Fan</string>
+    <string name="cooler">Cooler</string>
+    <string name="enclosed">Enclosed</string>
+    <string name="hot_water_bag">Hot Water Bag</string>
+    <string name="hot_and_cold_water">Hot and Cold Water</string>
+    <string name="day_guard">Day Guard</string>
+    <string name="night_guard">Night Guard</string>
+    <string name="police_verification">Police Verification</string>
+    <string name="submit_police_verification_document">Submit Police Verification Document</string>
+    <string name="mechanic_shop">Mechanic Shop</string>
+    <string name="_24_x_7">24 x 7</string>
+    <string name="day">Day</string>
+    <string name="no_shop">No Shop</string>
+    <string name="puncture_shop">Puncture Shop</string>
+    <string name="daily_utility_shop">Daily Utility Shop</string>
+    <string name="barber">Barber</string>
+    <string name="in_premises">IN Premises</string>
+    <string name="_1_200_m">1-200 M</string>
+    <string name="_200_400_m">200-400 M</string>
+    <string name="food_amen_title">Add Food Amenities</string>
+    <string name="parking_amen_title">Add Parking Amenities</string>
+    <string name="sleeping_amen_title">Add Sleeping Amenities</string>
+    <string name="washroom_amen_title">Add Washroom Amenities</string>
+    <string name="security_amen_title">Add Security Amenities</string>
+    <string name="other_amen_title">Add Other Amenities</string>
+    <string name="amen_title">Add Amenities</string>
     <!--<string name="choose_language">Choose Language</string>
     <string name="english">English</string>
     <string name="hindi">हिंदी</string>
