--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -47,12 +47,15 @@
     <string name="in_progress">In Progress</string>
     <string name="active">Active</string>
     <string name="inactive">Inactive</string>
-    <string name="notifications">Notifications</string>
+    <string name="notifications">सूचनाएं</string>
+    <string name="hepline">हेल्पलाइन</string>
+    <string name="settings">सेटिंग्स</string>
     <string name="privacy_policy">Privacy Policy</string>
     <string name="terms_and_conditions">Terms and Conditions</string>
     <string name="notifications_will_appear_here">Notifications will appear here</string>
     <string name="search_dhaba">Search Dhaba</string>
-    <string name="add_new_dhaba">Add New Dhaba</string>
+    <string name="dhaba_mnagement">ढाबा प्रबंधन</string>
+    <string name="add_new_dhaba">नया ढाबा जोड़ें</string>
     <string name="view_dhaba">View Dhaba</string>
     <string name="go_to_home">Go To Home</string>
     <string name="food">Food</string>
@@ -138,6 +141,7 @@
     <string name="next">Next</string>
     <string name="update_profile">Update Profile</string>
     <string name="notifications_settings">Notifications Settings</string>
+    <string name="clear_all">Clear All</string>
     <!--<string name="choose_language">Choose Language</string>
     <string name="english">English</string>
     <string name="hindi">हिंदी</string>
@@ -145,11 +149,11 @@
 
 
     <string-array name="menu_array">
-        <item>Dhaba Management</item>
+        <item>@string/dhaba_mnagement</item>
         <item>@string/add_new_dhaba</item>
-        <item>Notifications</item>
-        <item>Hepline</item>
-        <item>Settings</item>
+        <item>@string/notifications</item>
+        <item>@string/hepline</item>
+        <item>@string/settings</item>
     </string-array>
 
     <integer-array name="menu_icons">
