--- a/app/src/main/res/values-pa/strings.xml
+++ b/app/src/main/res/values-pa/strings.xml
@@ -46,12 +46,15 @@
     <string name="in_progress">In Progress</string>
     <string name="active">Active</string>
     <string name="inactive">Inactive</string>
-    <string name="notifications">Notifications</string>
+    <string name="notifications">ਸੂਚਨਾਵਾਂ</string>
+    <string name="hepline">ਹੈਪਲਾਈਨ</string>
+    <string name="settings">ਸੈਟਿੰਗਜ਼</string>
     <string name="privacy_policy">Privacy Policy</string>
     <string name="terms_and_conditions">Terms and Conditions</string>
     <string name="notifications_will_appear_here">Notifications will appear here</string>
     <string name="search_dhaba">Search Dhaba</string>
-    <string name="add_new_dhaba">ਨਵਾਂ Dhaba ਸ਼ਾਮਲ ਕਰੋ</string>
+    <string name="dhaba_mnagement">ਢਾਬਾ ਪ੍ਰਬੰਧਨ</string>
+    <string name="add_new_dhaba">ਨਵਾਂ ਢਾਬਾ ਸ਼ਾਮਲ ਕਰੋ </string>
     <string name="view_dhaba">View Dhaba</string>
     <string name="go_to_home">Go To Home</string>
     <string name="food">Food</string>
@@ -121,7 +124,7 @@
     <string name="landmark">ਲੈਂਡਮਾਰਕ</string>
     <string name="area">ਖੇਤਰ</string>
     <string name="pin_code">ਪਿੰਨ ਕੋਡ</string>
-    <string name="upload_dhaba_pictures">ਢਾਬਾ ਤਸਵੀਰਾਂ ਅਪਲੋਡ ਕਰੋ</string>
+    <string name="upload_dhaba_pictures">ਢਾਬਾ ਤਸਵੀਰ ਅਪਲੋਡ ਕਰੋ</string>
     <string name="save_as_draft">ਡਰਾਫਟ ਦੇ ਰੂਪ ਵਿੱਚ ਸੁਰੱਖਿਅਤ ਕਰੋ</string>
     <string name="owner_name">ਮਾਲਕ ਦਾ ਨਾਮ</string>
     <string name="phone_number">ਫੋਨ ਨੰਬਰ</string>
@@ -137,6 +140,7 @@
     <string name="next">ਅਗਲਾ</string>
     <string name="update_profile">Update Profile</string>
     <string name="notifications_settings">Notifications Settings</string>
+    <string name="clear_all">Clear All</string>
     <!--<string name="choose_language">Choose Language</string>
     <string name="english">English</string>
     <string name="hindi">हिंदी</string>
@@ -144,11 +148,11 @@
 
 
     <string-array name="menu_array">
-        <item>Dhaba ਸੂਚੀ</item>
+        <item>@string/dhaba_mnagement</item>
         <item>@string/add_new_dhaba</item>
-        <item>ਸੂਚਨਾਵਾਂ</item>
-        <item>ਹੈਪਲਾਈਨ</item>
-        <item>ਸੈਟਿੰਗਜ਼</item>
+        <item>@string/notifications</item>
+        <item>@string/hepline</item>
+        <item>@string/settings</item>
     </string-array>
 
     <integer-array name="menu_icons">
