--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -190,6 +190,9 @@
     <string name="or">OR</string>
     <string name="chat">Chat</string>
     <string name="request_for_call">Request for Call</string>
+    <string name="save">Save</string>
+    <string name="enter_your_phone_number_where_we_can_call_you">Enter your phone number where we can call you</string>
+    <string name="call_me_now">Call me now</string>
 
     <string-array name="select_highway_number">
         <item>Select National Highway Number</item>
