--- a/app/src/main/res/values-pa/strings.xml
+++ b/app/src/main/res/values-pa/strings.xml
@@ -188,6 +188,7 @@
     <string name="puncture_shop_day">Puncture Shop Day</string>
     <string name="daily_utility_shop_day">Daily Utility Shop Day</string>
     <string name="upload_dhaba_video">Upload Dhaba Video</string>
+    <string name="highway_number">National Highway Number</string>
 
 
     <string-array name="menu_array">
