--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -196,6 +196,7 @@
     <string name="chat">Chat</string>
     <string name="request_for_call">Request for Call</string>
     <string name="upload_dhaba_video">Upload Dhaba Video</string>
+    <string name="highway_number">National Highway Number</string>
 
     <string-array name="select_highway_number">
         <item>Select National Highway Number</item>
