--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -190,6 +190,7 @@
     <string name="daily_utility_shop_day">Daily Utility Shop Day</string>
     <string name="upload_dhaba_video">Upload Dhaba Video</string>
     <string name="highway_number">National Highway Number</string>
+    <string name="loading_cities_states">Loading Cities and States..</string>
 
 
     <string-array name="menu_array">
