--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -197,6 +197,7 @@
     <string name="request_for_call">Request for Call</string>
     <string name="upload_dhaba_video">Upload Dhaba Video</string>
     <string name="highway_number">National Highway Number</string>
+    <string name="loading_cities_states">Loading Cities and States..</string>
 
     <string-array name="select_highway_number">
         <item>Select National Highway Number</item>
@@ -207,13 +208,19 @@
         <item>Select State</item>
 
     </string-array>
+    <string-array name="property_status">
+        <item>Property Status</item>
+        <item>Owner</item>
+        <item>Rented</item>
+        <item>Lease</item>
+        <item>Other</item>
+    </string-array>
 
 
     <string-array name="select_city">
         <item>Select City</item>
 
     </string-array>
-
 
 
     <string-array name="menu_array">
