--- a/app/src/main/res/values-pa/strings.xml
+++ b/app/src/main/res/values-pa/strings.xml
@@ -199,6 +199,12 @@
     <string name="chat">Chat</string>
     <string name="request_for_call">Request for Call</string>
     <string name="save">Save</string>
+    <string name="enter_your_phone_number_where_we_can_call_you">Enter your phone number where we can call you</string>
+    <string name="call_me_now">Call me now</string>
+    <string name="dhaba_details">Dhaba Details</string>
+    <string name="owner_details">Owner Details</string>
+    <string name="amenities">Amenities</string>
+    <string name="save_dhaba">Save Dhaba</string>
 
     <string-array name="menu_array">
         <item>@string/dhaba_mnagement</item>
