Food amenities -> validations and api implementation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -205,7 +205,8 @@
     <string name="owner_details">Owner Details</string>
     <string name="amenities">Amenities</string>
     <string name="save_dhaba">Save Dhaba</string>
-
+    <string name="dhaba_created_successfully">Dhaba Created successfully</string>
+    <string name="food_amen_saved">Food Amenities Saved Successfully</string>
 
     <string-array name="select_highway_number">
         <item>Select National Highway Number</item>
