--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -206,6 +206,8 @@
     <string name="owner_details">Owner Details</string>
     <string name="amenities">Amenities</string>
     <string name="save_dhaba">Save Dhaba</string>
+    <string name="dhaba_created_successfully">Dhaba Created successfully</string>
+    <string name="food_amen_saved">Food Amenities Saved Successfully</string>
 
     <string-array name="menu_array">
         <item>@string/dhaba_mnagement</item>
