Dhaba app -> Dhaba List -> Api integration | UI changes in Add Dhaba | Bank Details api integration

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -208,6 +208,7 @@
     <string name="dhaba_created_successfully">Dhaba Created successfully</string>
     <string name="food_amen_saved">Food Amenities Saved Successfully</string>
     <string name="no_data_found">No Data Found</string>
+    <string name="copied_to_clipboard">Dhaba ID Copied to clipboard</string>
 
     <string-array name="select_highway_number">
         <item>Select National Highway Number</item>
