--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -210,6 +210,8 @@
     <string name="food_amen_saved">Food Amenities Saved Successfully</string>
     <string name="no_data_found">No Data Found</string>
     <string name="copied_to_clipboard">Dhaba ID Copied to clipboard</string>
+    <string name="parking_amen_saved">Parking Amenities Saved Successfully</string>
+    <string name="amenities_selected">Amenities Selected</string>
 
     <string-array name="menu_array">
         <item>@string/dhaba_mnagement</item>
