--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -211,6 +211,9 @@
     <string name="copied_to_clipboard">Dhaba ID Copied to clipboard</string>
     <string name="parking_amen_saved">Parking Amenities Saved Successfully</string>
     <string name="amenities_selected">Amenities Selected</string>
+    <string name="sleeping_amen_saved">Sleeping Amenities Saved Successfully.</string>
+    <string name="upload_photos">Upload Photos</string>
+    <string name="no_amenities_selected">Amenities Not Selected</string>
 
     <string-array name="select_highway_number">
         <item>Select National Highway Number</item>
@@ -235,6 +238,27 @@
 
     </string-array>
 
+
+    <string-array name="menu_array_fiels_ex">
+        <item>@string/dhaba_mnagement</item>
+        <item>@string/add_new_dhaba</item>
+        <item>@string/notifications</item>
+        <item>@string/settings</item>
+    </string-array>
+
+    <integer-array name="menu_icons_fiels_ex">
+        <item>@drawable/ic_home</item>
+        <item>@drawable/ic_add_dhaba</item>
+        <item>@drawable/ic_notification</item>
+        <item>@drawable/ic_settings</item>
+    </integer-array>
+
+    <integer-array name="menu_icons_hilighted_fiels_ex">
+        <item>@drawable/ic_home_hilighted</item>
+        <item>@drawable/ic_add_dhaba_hilighted</item>
+        <item>@drawable/ic_notification_hilighted</item>
+        <item>@drawable/ic_settings_hilighted</item>
+    </integer-array>
 
     <string-array name="menu_array">
         <item>@string/dhaba_mnagement</item>
