--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -214,6 +214,7 @@
     <string name="sleeping_amen_saved">Sleeping Amenities Saved Successfully.</string>
     <string name="upload_photos">Upload Photos</string>
     <string name="no_amenities_selected">Amenities Not Selected</string>
+    <string name="security_amen_saved">Security amenities saved successfully</string>
 
     <string-array name="select_highway_number">
         <item>Select National Highway Number</item>
