--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -121,7 +121,7 @@
     <string name="amen_title">Add Amenities</string>
     <string name="dhaba_name">Dhaba Name</string>
     <string name="dhaba_address">Dhaba address</string>
-    <string name="fetch_location">Fetch Location</string>
+    <string name="fetch_location">वर्तमान स्थान</string>
     <string name="landmark">Landmark</string>
     <string name="area">Area</string>
     <string name="pin_code">Pin code</string>
@@ -228,7 +228,10 @@
     <string name="cancel">रद्द करें</string>
     <string name="please_confirm">कृपया पुष्टि करें</string>
     <string name="want_to_discard">क्या आप ढाबा विवरण छोड़ना चाहते हैं?</string>
-
+    <string name="pick_from_map">| नक्शा से चुनें</string>
+    <string name="choose_location">Choose Location</string>
+    <string name="use_location">Use Location</string>
+    <string name="click_on_map_to_get_address">Click on map to get address</string>
 
     <string-array name="menu_array_fiels_ex">
         <item>@string/dhaba_mnagement</item>
