--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -241,6 +241,15 @@
     <string name="saving_dhaba_details">Saving Dhaba Details</string>
     <string name="updating_dhaba_details">Updating Dhaba Details</string>
     <string name="dhaba_updated_successfully">Dhaba Details Updated Successfully</string>
+    <string name="updated_successfully">Updated Successfully</string>
+    <string name="search_highway">Search Highway</string>
+    <string name="update_food_amen">Update food amenities</string>
+    <string name="update_light_amen">Update light amenities</string>
+    <string name="update_security_amen">Update security amenities</string>
+    <string name="update_washroom_amen">Update washroom amenities</string>
+    <string name="update_sleeping_amen">Update sleeping amenities</string>
+    <string name="update_parking_amen">Update parking amenities</string>
+    <string name="update_amen">Update Amenities</string>
 
     <string-array name="menu_array_fiels_ex">
         <item>@string/dhaba_mnagement</item>
