--- a/app/src/main/res/values-pa/strings.xml
+++ b/app/src/main/res/values-pa/strings.xml
@@ -252,6 +252,15 @@
     <string name="updating_owner">Updating Owner Details</string>
     <string name="photo_deleted">Photo deleted successfully.</string>
     <string name="_10_digit_mobile_number">10 Digit mobile number</string>
+    <string name="profile_updated">Profile updated successfully</string>
+    <string name="please_enter_name">Please enter your name</string>
+    <string name="enter_email_id">Please enter a valid Email-ID</string>
+    <string name="enter_mobile_number">Please enter mobile number</string>
+    <string name="updating_profile">Updating profile..</string>
+    <string name="enter_dhaba_name">Please enter dhaba name.</string>
+    <string name="location_alert_dialog">Location service is not enabled, do you want to enable it?</string>
+    <string name="unable_to_fetch_address">Unable fetch your current address.</string>
+    <string name="assigned_to">Assigned To</string>
 
     <string-array name="menu_array">
         <item>@string/dhaba_mnagement</item>
